@@ -26,11 +26,8 @@ namespace LocARNA {
                     struct_pos.seq_pos = j;
                     struct_pos.unpaired = true;
                 }
-                for (BasePairs::RightAdjList::const_iterator inner_arc =
-                         bps.right_adjlist(j).begin();
-                     inner_arc != bps.right_adjlist(j).end(); ++inner_arc) {
-                    if (inner_arc->left() <= arc.left())
-                        break;
+                for (auto inner_arc = bps.right_adjlist_s(j).begin();
+                     inner_arc->left() > arc.left(); ++inner_arc) {
                     if (!is_valid_arc(*inner_arc, arc))
                         continue;
                     left_adj_vec.at(arc.idx())
@@ -66,6 +63,7 @@ namespace LocARNA {
         //      seq_length << std::endl;
         info_valid_seq_pos_vecs.resize(seq_length + 1);
         valid_mat_pos_vecs_before_eq.resize(seq_length + 1);
+
         // go over all left ends
         for (pos_type cur_left_end = 0; cur_left_end <= seq_length;
              cur_left_end++) {
@@ -76,12 +74,15 @@ namespace LocARNA {
             struct_pos.seq_pos = cur_left_end;
             info_valid_seq_pos_vecs.at(cur_left_end).push_back(struct_pos);
             valid_mat_pos_vecs_before_eq.at(cur_left_end).push_back(0);
-            pos_type max_right_end = (bps.left_adjlist(cur_left_end).begin() ==
-                                      bps.left_adjlist(cur_left_end).end())
-                ? 0
-                : (--bps.left_adjlist(cur_left_end).end())->right();
+
+            auto cur_ladjl = bps.left_adjlist_s(cur_left_end);
+            pos_type max_right_end = cur_ladjl.size() >= 2 /*sentinel!*/
+                ? cur_ladjl[cur_ladjl.size() - 2].right()
+                : 0;
+
             if (cur_left_end == 0)
                 max_right_end = seq_length + 1;
+
             for (pos_type cur_pos = cur_left_end + 1; cur_pos < max_right_end;
                  cur_pos++) {
                 struct_pos.reset();
@@ -89,13 +90,9 @@ namespace LocARNA {
                     valid_pos_external(cur_pos, 0, struct_pos);
                 else
                     iterate_left_adj_list(cur_left_end, cur_pos, 0, struct_pos);
-                for (BasePairs::RightAdjList::const_iterator inner_arc =
-                         bps.right_adjlist(cur_pos).begin();
-                     inner_arc != bps.right_adjlist(cur_pos).end();
-                     ++inner_arc) {
-                    if (inner_arc->left() <= cur_left_end)
-                        break;
 
+                for (auto inner_arc = bps.right_adjlist_s(cur_pos).begin();
+                     inner_arc->left() > cur_left_end; ++inner_arc) {
                     if (cur_left_end == 0)
                         valid_pos_external(cur_pos, &(*inner_arc), struct_pos);
                     else
@@ -143,9 +140,9 @@ namespace LocARNA {
                                                 pos_type cur_pos,
                                                 const Arc *inner_arc,
                                                 info_for_pos &struct_pos) {
-        for (BasePairs::LeftAdjList::const_iterator arc =
-                 bps.left_adjlist(cur_left_end).begin();
-             arc != bps.left_adjlist(cur_left_end).end(); ++arc) {
+        size_type seq_length = rnadata.length();
+        for (auto arc = bps.left_adjlist_s(cur_left_end).begin();
+             arc->right() <= seq_length; ++arc) {
             if (cur_pos >= arc->right())
                 continue;
             if (!inner_arc) {
