@@ -1,6 +1,7 @@
 ============================================================
 === 2017
 
+	Optimize inner loop (add sentinels to left and right adjacency lists)
 1.9.3alpha
 	Reduce memory footprint of locarna
 	Enable optional extended double for partition functions without
